--- a/project2/index.html
+++ b/project2/index.html
@@ -30,7 +30,7 @@
             <div class="s3">
                 <h4>Can't Get Enough of Our Cuisine? For orders under $50, a small delivery fee ensures your favorite flavors are conveniently delivered right to your doorstep.</h4>
             </div>
-        </Div>
+        </div>
     </div>
 
 
